# dotlink

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dotlink.py  makefile  pyproject.toml  requirements-dev.txt  setup.py
.github/: issue_template.md
.github/workflows/: build.yml
dotlink/: __init__.py  __main__.py  __version__.py  actions.py  cli.py  core.py  dotlink.py  types.py  util.py
dotlink/tests/: actions.py  core.py  smoke.py  types.py  util.py
example/: dotlink
