[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dotlink"
authors = [
    {name = "Amethyst Reese", email = "amy@noswap.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
requires-python = ">=3.2"
dynamic = ["version", "description"]

[project.scripts]
dotlink = "dotlink:main"

[project.urls]
home-page = "https://github.com/amyreese/dotlink"
Github = "https://github.com/amyreese/dotlink"

[tool.flit.sdist]
exclude = [
    ".github/",
]

[tool.attribution]
name = "dotlink"
package = "dotlink"
version_file = true
signed_tags = true
