[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dotlink"
authors = [
    {name = "Amethyst Reese", email = "amy@noswap.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "click >= 8",
    "typing_extensions >= 4",
]

[project.optional-dependencies]
dev = [
    "attribution==1.6.2",
    "black==23.11.0",
    "flake8==6.1.0",
    "flit==3.9.0",
    "mypy==1.6.1",
    "pytest==7.4.3",
    "usort==1.0.7",
    "ufmt==2.3.0",
]

[project.scripts]
dotlink = "dotlink.cli:main"

[project.urls]
home-page = "https://github.com/amyreese/dotlink"
Github = "https://github.com/amyreese/dotlink"

[tool.flit.sdist]
exclude = [
    ".github/",
]

[tool.attribution]
name = "dotlink"
package = "dotlink"
ignored_authors = ["dependabot"]
version_file = true
signed_tags = true

[tool.mypy]
strict = true

[tool.pytest.ini_options]
python_files = "tests/*.py"