[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dotlink"
authors = [
    {name = "Amethyst Reese", email = "amy@noswap.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "click >= 8",
    "platformdirs >= 4",
    "typing_extensions >= 4",
]

[project.optional-dependencies]
dev = [
    "attribution==1.7.1",
    "black==24.4.2",
    "flake8==7.0.0",
    "flit==3.9.0",
    "mypy==1.10.0",
    "pytest==8.2.0",
    "usort==1.0.8.post1",
    "ufmt==2.5.1",
]

[project.scripts]
dotlink = "dotlink.cli:main"

[project.urls]
home-page = "https://github.com/amyreese/dotlink"
Github = "https://github.com/amyreese/dotlink"

[tool.flit.sdist]
exclude = [
    ".github/",
]

[tool.attribution]
name = "dotlink"
package = "dotlink"
ignored_authors = ["dependabot"]
version_file = true
signed_tags = true

[tool.mypy]
strict = true

[tool.pytest.ini_options]
python_files = "tests/*.py"